package User;

import org.example.DataReader.FileIO;

public class Account {


    FileIO io = new FileIO();



    public void Withdraw(){


    }
    public void Deposit() {


    }

    public void setBalance (){


            }
}
