package User;

import java.util.ArrayList;

public class User {




private double balance;
private String username;
private String password;
private boolean loggedIn = false;

ArrayList<User> users = new ArrayList<>();


User(String username, String password, double balance){


}
public String getUsername(){
    return null;
}
public String getPassword(){


    return null;
}
public double getBalance(){

    return 0;
}
public boolean isLoggedIn(){

    return false;
}

String ToString(){

    return null;
}
}
