package org.example.DataReader;

import User.User;

import java.util.ArrayList;

public class FileIO {



    User.User user;
    ArrayList<User> User = new ArrayList<>();


    public String readUserData(){

    return null;
}
    public ArrayList saveUserData(ArrayList<User>newUserList){

        return newUserList;
    }



}
