package org.example.Games;

import org.example.TextUI;

public class CoinFlipGame {


    TextUI ui = new TextUI();
    Account acc = new Account();






    public void runCoinFlip(){

    }

    public void coinFlipDeposit(){

    }
}
