package org.example;

import User.User;
import org.example.DataReader.FileIO;

import java.util.ArrayList;

public class Login {
    FileIO io = new FileIO();
    TextUI ui = new TextUI();
    User user;




  public void login(ArrayList<User> users){


  }

    String usernameInput(){

        return null;
    }
    String passwordInput(){

        return null;
    }

public void getLoggedInUser(){

}
 String getUsernameInput(){

     return null;
 }
 String getPasswordInput(){

     return null;
 }




}
